--- a/packages.config
+++ b/packages.config
@@ -6,4 +6,10 @@
   <package id="DSharpPlus" version="3.2.3" targetFramework="net472" />
   <package id="DSharpPlus.CommandsNext" version="3.2.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
+  <package id="SixLabors.Core" version="1.0.0-beta0007" targetFramework="net472" />
+  <package id="SixLabors.ImageSharp" version="1.0.0-beta0006" targetFramework="net472" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net472" />
 </packages>
