Added processes, cursor, timeout for tts & play
Sounds for cursor and folder can be used by dropping a file called "folder.wav" and/or "cursor.wav" into the directory

--- a/StalkBot.csproj
+++ b/StalkBot.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands.cs" />
+    <Compile Include="ConsoleTables.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
