--- a/packages.config
+++ b/packages.config
@@ -5,6 +5,7 @@
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
   <package id="DSharpPlus" version="3.2.3" targetFramework="net472" />
   <package id="DSharpPlus.CommandsNext" version="3.2.3" targetFramework="net472" />
+  <package id="NAudio" version="1.8.5" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
   <package id="SixLabors.Core" version="1.0.0-beta0007" targetFramework="net472" />
   <package id="SixLabors.ImageSharp" version="1.0.0-beta0006" targetFramework="net472" />
