--- a/packages.config
+++ b/packages.config
@@ -3,14 +3,28 @@
   <package id="AForge" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
-  <package id="DSharpPlus" version="3.2.3" targetFramework="net472" />
-  <package id="DSharpPlus.CommandsNext" version="3.2.3" targetFramework="net472" />
-  <package id="NAudio" version="1.8.5" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
-  <package id="SixLabors.Core" version="1.0.0-beta0007" targetFramework="net472" />
-  <package id="SixLabors.ImageSharp" version="1.0.0-beta0006" targetFramework="net472" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.1" targetFramework="net472" />
+  <package id="DSharpPlus" version="4.0.0-nightly-00707" targetFramework="net472" />
+  <package id="DSharpPlus.CommandsNext" version="4.0.0-nightly-00707" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.1" targetFramework="net472" />
+  <package id="NAudio" version="1.10.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="SixLabors.Core" version="1.0.0-beta0008" targetFramework="net472" />
+  <package id="SixLabors.ImageSharp" version="1.0.0-rc0003" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net472" />
+  <package id="System.Net.WebSockets.Client" version="4.3.2" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0-preview.5.20278.1" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
